// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VehiclePropertiesPanel renders a vehicle properties panel 1`] = `
<div
  className="m-vehicle-properties-panel"
>
  <div
    className="m-properties-panel__header-wrapper"
  >
    <div
      className="m-view-header"
    >
      <h2
        className="m-view-header__title"
      >
        Vehicles
      </h2>
      <button
        aria-label="Close"
        className="m-close-button m-close-button--x-large m-close-button--light"
        onClick={[Function]}
      >
        <span
          aria-hidden={true}
          aria-label=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg/>",
            }
          }
          role="img"
        />
      </button>
    </div>
    <div
      className="m-properties-panel__header"
    >
      <div
        className="m-properties-panel__label"
      >
        <svg
          role="img"
          style={
            Object {
              "height": 64,
              "width": 64,
            }
          }
          viewBox="-32 -20 64 64"
        >
          <title>
            Vehicle Status Icon
          </title>
          <g
            className="m-vehicle-icon m-vehicle-icon--large on-time early-red"
          >
            <rect
              className="m-vehicle-icon__label-background"
              height={24}
              rx={12}
              ry={12}
              width={64}
              x={-32}
              y={19}
            />
            <text
              className="m-vehicle-icon__label m-vehicle-icon__label--normal"
              dominantBaseline="central"
              textAnchor="middle"
              x="0"
              y={31}
            >
              1
            </text>
            <path
              className="m-vehicle-icon__triangle"
              d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
              data-testid="vehicle-triangle"
              transform="scale(1) rotate(0) translate(-24,-22)"
            />
            <text
              className="m-vehicle-icon__variant"
              dominantBaseline="alphabetic"
              textAnchor="middle"
              x={0}
              y={14}
            >
              X
            </text>
          </g>
        </svg>
      </div>
      <div
        className="m-properties-panel__variant"
      >
        <div
          className="m-properties-panel__inbound-outbound"
        />
        <output
          aria-label="Route Variant Name"
          className="m-route-variant-name undefined"
        >
          <output
            aria-label="Route & Variant"
            className="m-route-variant-name__route-id"
          >
            39_X
          </output>
           
          <output
            aria-label="Headsign"
            className="m-route-variant-name__headsign"
          >
            Forest Hills
          </output>
        </output>
        <div
          className="m-properties-panel__schedule-adherence on-time early-red"
        >
          <div
            className="m-properties-panel__schedule-adherence-status-icon"
          >
            <svg
              height="10"
              width="10"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
              />
            </svg>
          </div>
          <div
            className="m-properties-panel__schedule-adherence-status-string"
          >
            on time
          </div>
          <div
            className="m-properties-panel__schedule-adherence-label"
          >
            (0 min early)
          </div>
        </div>
      </div>
      <div
        className="m-properties-panel__ping-container"
      >
        <div
          className="m-properties-panel__last-gps-ping"
        >
          111s ago
        </div>
      </div>
    </div>
    <ul
      className="m-tabs__tab-list"
      role="tablist"
    >
      <li
        className="m-tabs__tab m-tabs__tab--selected"
      >
        <button
          aria-selected={true}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Status
        </button>
      </li>
      <li
        className="m-tabs__tab"
      >
        <button
          aria-selected={false}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Run
        </button>
      </li>
      <li
        className="m-tabs__tab"
      >
        <button
          aria-selected={false}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Block
        </button>
      </li>
    </ul>
  </div>
  <div
    className="m-tabs__tab-panel"
  >
    <div
      className="m-properties-list"
    >
      <table
        className="m-properties-list__table"
      >
        <tbody>
          <tr
            className="m-properties-list__property "
          >
            <td
              className="m-properties-list__property-label"
            >
              Run
            </td>
            <td
              className="m-properties-list__property-value"
            >
              run-1
            </td>
          </tr>
          <tr
            className="m-properties-list__property "
          >
            <td
              className="m-properties-list__property-label"
            >
              Vehicle
            </td>
            <td
              className="m-properties-list__property-value"
            >
              v1-label
            </td>
          </tr>
          <tr
            className="m-properties-list__property m-properties-list__property--operator fs-mask"
          >
            <td
              className="m-properties-list__property-label"
            >
              Operator
            </td>
            <td
              className="m-properties-list__property-value"
            >
              PATTI SMITH #op1
            </td>
          </tr>
          <tr
            className="m-properties-list__property m-properties-list__property--last-login"
          >
            <td
              className="m-properties-list__property-label"
            >
              Last Login
            </td>
            <td
              className="m-properties-list__property-value"
            >
              4 hr 3 min; 1:38 PM
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="m-vehicle-properties-panel__location"
    >
      <div
        className="m-vehicle-properties-panel__latlng"
      >
        <div
          className="m-vehicle-properties-panel__label"
        >
          Current Location
        </div>
        <a
          className="m-vehicle-properties-panel__link"
          href="https://www.google.com/maps/dir/?api=1&destination=0,0&travelmode=driving"
          rel="noreferrer"
          target="_blank"
        >
          Directions
        </a>
      </div>
      <div
        className="m-vehicle-properties-panel__next-stop"
      >
        <div
          className="m-vehicle-properties-panel__label"
        >
          Next Stop
        </div>
        <div
          className="m-vehicle-properties-panel__value"
        >
          Stop Name
        </div>
      </div>
      <div
        className="m-vehicle-properties-panel__map"
      >
        <div
          className="m-vehicle-map-state m-vehicle-map-state--auto-centering"
        />
        <div
          className="m-vehicle-map"
          id="id-vehicle-map"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`VehiclePropertiesPanel renders for a late vehicle 1`] = `
<div
  className="m-vehicle-properties-panel"
>
  <div
    className="m-properties-panel__header-wrapper"
  >
    <div
      className="m-view-header"
    >
      <h2
        className="m-view-header__title"
      >
        Vehicles
      </h2>
      <button
        aria-label="Close"
        className="m-close-button m-close-button--x-large m-close-button--light"
        onClick={[Function]}
      >
        <span
          aria-hidden={true}
          aria-label=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg/>",
            }
          }
          role="img"
        />
      </button>
    </div>
    <div
      className="m-properties-panel__header"
    >
      <div
        className="m-properties-panel__label"
      >
        <svg
          role="img"
          style={
            Object {
              "height": 64,
              "width": 64,
            }
          }
          viewBox="-32 -20 64 64"
        >
          <title>
            Vehicle Status Icon
          </title>
          <g
            className="m-vehicle-icon m-vehicle-icon--large late early-red"
          >
            <rect
              className="m-vehicle-icon__label-background"
              height={24}
              rx={12}
              ry={12}
              width={64}
              x={-32}
              y={19}
            />
            <text
              className="m-vehicle-icon__label m-vehicle-icon__label--normal"
              dominantBaseline="central"
              textAnchor="middle"
              x="0"
              y={31}
            >
              1
            </text>
            <path
              className="m-vehicle-icon__triangle"
              d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
              data-testid="vehicle-triangle"
              transform="scale(1) rotate(0) translate(-24,-22)"
            />
            <text
              className="m-vehicle-icon__variant"
              dominantBaseline="alphabetic"
              textAnchor="middle"
              x={0}
              y={14}
            >
              X
            </text>
          </g>
        </svg>
      </div>
      <div
        className="m-properties-panel__variant"
      >
        <div
          className="m-properties-panel__inbound-outbound"
        />
        <output
          aria-label="Route Variant Name"
          className="m-route-variant-name undefined"
        >
          <output
            aria-label="Route & Variant"
            className="m-route-variant-name__route-id"
          >
            39_X
          </output>
           
          <output
            aria-label="Headsign"
            className="m-route-variant-name__headsign"
          >
            Forest Hills
          </output>
        </output>
        <div
          className="m-properties-panel__schedule-adherence late early-red"
        >
          <div
            className="m-properties-panel__schedule-adherence-status-icon"
          >
            <svg
              height="10"
              width="10"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
              />
            </svg>
          </div>
          <div
            className="m-properties-panel__schedule-adherence-status-string"
          >
            late
          </div>
          <div
            className="m-properties-panel__schedule-adherence-label"
          >
            (6 min late)
          </div>
        </div>
      </div>
      <div
        className="m-properties-panel__ping-container"
      >
        <div
          className="m-properties-panel__last-gps-ping"
        >
          111s ago
        </div>
      </div>
    </div>
    <ul
      className="m-tabs__tab-list"
      role="tablist"
    >
      <li
        className="m-tabs__tab m-tabs__tab--selected"
      >
        <button
          aria-selected={true}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Status
        </button>
      </li>
      <li
        className="m-tabs__tab"
      >
        <button
          aria-selected={false}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Run
        </button>
      </li>
      <li
        className="m-tabs__tab"
      >
        <button
          aria-selected={false}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Block
        </button>
      </li>
    </ul>
  </div>
  <div
    className="m-tabs__tab-panel"
  >
    <div
      className="m-properties-list"
    >
      <table
        className="m-properties-list__table"
      >
        <tbody>
          <tr
            className="m-properties-list__property "
          >
            <td
              className="m-properties-list__property-label"
            >
              Run
            </td>
            <td
              className="m-properties-list__property-value"
            >
              run-1
            </td>
          </tr>
          <tr
            className="m-properties-list__property "
          >
            <td
              className="m-properties-list__property-label"
            >
              Vehicle
            </td>
            <td
              className="m-properties-list__property-value"
            >
              v1-label
            </td>
          </tr>
          <tr
            className="m-properties-list__property m-properties-list__property--operator fs-mask"
          >
            <td
              className="m-properties-list__property-label"
            >
              Operator
            </td>
            <td
              className="m-properties-list__property-value"
            >
              PATTI SMITH #op1
            </td>
          </tr>
          <tr
            className="m-properties-list__property m-properties-list__property--last-login"
          >
            <td
              className="m-properties-list__property-label"
            >
              Last Login
            </td>
            <td
              className="m-properties-list__property-value"
            >
              4 hr 3 min; 1:38 PM
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="m-vehicle-properties-panel__location"
    >
      <div
        className="m-vehicle-properties-panel__latlng"
      >
        <div
          className="m-vehicle-properties-panel__label"
        >
          Current Location
        </div>
        <a
          className="m-vehicle-properties-panel__link"
          href="https://www.google.com/maps/dir/?api=1&destination=0,0&travelmode=driving"
          rel="noreferrer"
          target="_blank"
        >
          Directions
        </a>
      </div>
      <div
        className="m-vehicle-properties-panel__next-stop"
      >
        <div
          className="m-vehicle-properties-panel__label"
        >
          Next Stop
        </div>
        <div
          className="m-vehicle-properties-panel__value"
        >
          Stop Name
        </div>
      </div>
      <div
        className="m-vehicle-properties-panel__map"
      >
        <div
          className="m-vehicle-map-state m-vehicle-map-state--auto-centering"
        />
        <div
          className="m-vehicle-map"
          id="id-vehicle-map"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`VehiclePropertiesPanel renders for a shuttle 1`] = `
<div
  className="m-vehicle-properties-panel"
>
  <div
    className="m-properties-panel__header-wrapper"
  >
    <div
      className="m-view-header"
    >
      <h2
        className="m-view-header__title"
      >
        Vehicles
      </h2>
      <button
        aria-label="Close"
        className="m-close-button m-close-button--x-large m-close-button--light"
        onClick={[Function]}
      >
        <span
          aria-hidden={true}
          aria-label=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg/>",
            }
          }
          role="img"
        />
      </button>
    </div>
    <div
      className="m-properties-panel__header"
    >
      <div
        className="m-properties-panel__label"
      >
        <svg
          role="img"
          style={
            Object {
              "height": 64,
              "width": 72,
            }
          }
          viewBox="-36 -20 72 64"
        >
          <title>
            Vehicle Status Icon
          </title>
          <g
            className="m-vehicle-icon m-vehicle-icon--large"
          >
            <rect
              className="m-vehicle-icon__label-background"
              height={24}
              rx={12}
              ry={12}
              width={72}
              x={-36}
              y={19}
            />
            <text
              className="m-vehicle-icon__label m-vehicle-icon__label--extended"
              dominantBaseline="central"
              textAnchor="middle"
              x="0"
              y={31}
            >
              v1-label
            </text>
            <path
              className="m-vehicle-icon__triangle"
              d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
              data-testid="vehicle-triangle"
              transform="scale(1) rotate(0) translate(-24,-22)"
            />
            <text
              className="m-vehicle-icon__variant"
              dominantBaseline="alphabetic"
              textAnchor="middle"
              x={0}
              y={14}
            >
              X
            </text>
          </g>
        </svg>
      </div>
      <div
        className="m-properties-panel__variant"
      >
        <div
          className="m-properties-panel__inbound-outbound"
        />
        <output
          aria-label="Route Variant Name"
          className="m-route-variant-name undefined"
        >
          Shuttle
        </output>
      </div>
      <div
        className="m-properties-panel__ping-container"
      >
        <div
          className="m-properties-panel__last-gps-ping"
        >
          111s ago
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-properties-list"
  >
    <table
      className="m-properties-list__table"
    >
      <tbody>
        <tr
          className="m-properties-list__property "
        >
          <td
            className="m-properties-list__property-label"
          >
            Run
          </td>
          <td
            className="m-properties-list__property-value"
          >
            Special 999 555
          </td>
        </tr>
        <tr
          className="m-properties-list__property "
        >
          <td
            className="m-properties-list__property-label"
          >
            Vehicle
          </td>
          <td
            className="m-properties-list__property-value"
          >
            v1-label
          </td>
        </tr>
        <tr
          className="m-properties-list__property m-properties-list__property--operator fs-mask"
        >
          <td
            className="m-properties-list__property-label"
          >
            Operator
          </td>
          <td
            className="m-properties-list__property-value"
          >
            PATTI SMITH #op1
          </td>
        </tr>
        <tr
          className="m-properties-list__property m-properties-list__property--last-login"
        >
          <td
            className="m-properties-list__property-label"
          >
            Last Login
          </td>
          <td
            className="m-properties-list__property-value"
          >
            4 hr 3 min; 1:38 PM
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="m-vehicle-properties-panel__location"
  >
    <div
      className="m-vehicle-properties-panel__latlng"
    >
      <div
        className="m-vehicle-properties-panel__label"
      >
        Current Location
      </div>
      <a
        className="m-vehicle-properties-panel__link"
        href="https://www.google.com/maps/dir/?api=1&destination=0,0&travelmode=driving"
        rel="noreferrer"
        target="_blank"
      >
        Directions
      </a>
    </div>
    <div
      className="m-vehicle-properties-panel__next-stop"
    >
      <div
        className="m-vehicle-properties-panel__label"
      >
        Next Stop
      </div>
      <div
        className="m-vehicle-properties-panel__value"
      >
        <span
          className="m-vehicle-properties-panel__not-available"
        >
          Not available
        </span>
      </div>
    </div>
    <div
      className="m-vehicle-properties-panel__map"
    >
      <div
        className="m-vehicle-map-state m-vehicle-map-state--auto-centering"
      />
      <div
        className="m-vehicle-map"
        id="id-vehicle-map"
      />
    </div>
  </div>
</div>
`;

exports[`VehiclePropertiesPanel renders for a vehicle with block waivers 1`] = `
<div
  className="m-vehicle-properties-panel"
>
  <div
    className="m-properties-panel__header-wrapper"
  >
    <div
      className="m-view-header"
    >
      <h2
        className="m-view-header__title"
      >
        Vehicles
      </h2>
      <button
        aria-label="Close"
        className="m-close-button m-close-button--x-large m-close-button--light"
        onClick={[Function]}
      >
        <span
          aria-hidden={true}
          aria-label=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg/>",
            }
          }
          role="img"
        />
      </button>
    </div>
    <div
      className="m-properties-panel__header"
    >
      <div
        className="m-properties-panel__label"
      >
        <svg
          role="img"
          style={
            Object {
              "height": 64,
              "width": 64,
            }
          }
          viewBox="-32 -20 64 64"
        >
          <title>
            Vehicle Status Icon
          </title>
          <g
            className="m-vehicle-icon m-vehicle-icon--large on-time early-red"
          >
            <rect
              className="m-vehicle-icon__label-background"
              height={24}
              rx={12}
              ry={12}
              width={64}
              x={-32}
              y={19}
            />
            <text
              className="m-vehicle-icon__label m-vehicle-icon__label--normal"
              dominantBaseline="central"
              textAnchor="middle"
              x="0"
              y={31}
            >
              1
            </text>
            <path
              className="m-vehicle-icon__triangle"
              d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
              data-testid="vehicle-triangle"
              transform="scale(1) rotate(0) translate(-24,-22)"
            />
            <text
              className="m-vehicle-icon__variant"
              dominantBaseline="alphabetic"
              textAnchor="middle"
              x={0}
              y={14}
            >
              X
            </text>
          </g>
        </svg>
      </div>
      <div
        className="m-properties-panel__variant"
      >
        <div
          className="m-properties-panel__inbound-outbound"
        />
        <output
          aria-label="Route Variant Name"
          className="m-route-variant-name undefined"
        >
          <output
            aria-label="Route & Variant"
            className="m-route-variant-name__route-id"
          >
            39_X
          </output>
           
          <output
            aria-label="Headsign"
            className="m-route-variant-name__headsign"
          >
            Forest Hills
          </output>
        </output>
        <div
          className="m-properties-panel__schedule-adherence on-time early-red"
        >
          <div
            className="m-properties-panel__schedule-adherence-status-icon"
          >
            <svg
              height="10"
              width="10"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
              />
            </svg>
          </div>
          <div
            className="m-properties-panel__schedule-adherence-status-string"
          >
            on time
          </div>
          <div
            className="m-properties-panel__schedule-adherence-label"
          >
            (0 min early)
          </div>
        </div>
      </div>
      <div
        className="m-properties-panel__ping-container"
      >
        <div
          className="m-properties-panel__last-gps-ping"
        >
          111s ago
        </div>
      </div>
    </div>
    <ul
      className="m-tabs__tab-list"
      role="tablist"
    >
      <li
        className="m-tabs__tab m-tabs__tab--selected"
      >
        <button
          aria-selected={true}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Status
        </button>
      </li>
      <li
        className="m-tabs__tab"
      >
        <button
          aria-selected={false}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Run
        </button>
      </li>
      <li
        className="m-tabs__tab"
      >
        <button
          aria-selected={false}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Block
        </button>
      </li>
    </ul>
  </div>
  <div
    className="m-tabs__tab-panel"
  >
    <div
      className="m-block-waiver-list"
    >
      <div
        aria-labelledby="card-label-:r7:"
        className="m-card m-card--kiwi m-block-waiver-banner m-block-waiver-banner--past m-card--no-focus-or-hover m-card--inactive"
      >
        <div
          className="m-card__left"
        >
          <div
            className="m-card__left-content"
          >
            <div
              className="m-card__top-row"
            >
              <div
                className="m-card__title"
                id="card-label-:r7:"
              >
                <h3
                  className="m-block-waiver-banner__title"
                >
                  Dispatcher Note
                </h3>
                <div
                  className="m-block-waiver-banner__badge m-block-waiver-banner__badge--past"
                >
                  Past
                </div>
              </div>
            </div>
            <div
              className="m-card__contents"
            >
              <div
                className="m-card__body"
              >
                <div
                  className="m-properties-list"
                >
                  <table
                    className="m-properties-list__table"
                  >
                    <tbody>
                      <tr
                        className="m-properties-list__property "
                      >
                        <td
                          className="m-properties-list__property-label"
                        >
                          Reason
                        </td>
                        <td
                          className="m-properties-list__property-value"
                        >
                          Block Waiver
                        </td>
                      </tr>
                      <tr
                        className="m-properties-list__property "
                      >
                        <td
                          className="m-properties-list__property-label"
                        >
                          Start Time
                        </td>
                        <td
                          className="m-properties-list__property-value"
                        >
                          5:05 AM
                        </td>
                      </tr>
                      <tr
                        className="m-properties-list__property "
                      >
                        <td
                          className="m-properties-list__property-label"
                        >
                          End Time
                        </td>
                        <td
                          className="m-properties-list__property-value"
                        >
                          12:38 PM
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="m-properties-list"
    >
      <table
        className="m-properties-list__table"
      >
        <tbody>
          <tr
            className="m-properties-list__property "
          >
            <td
              className="m-properties-list__property-label"
            >
              Run
            </td>
            <td
              className="m-properties-list__property-value"
            >
              run-1
            </td>
          </tr>
          <tr
            className="m-properties-list__property "
          >
            <td
              className="m-properties-list__property-label"
            >
              Vehicle
            </td>
            <td
              className="m-properties-list__property-value"
            >
              v1-label
            </td>
          </tr>
          <tr
            className="m-properties-list__property m-properties-list__property--operator fs-mask"
          >
            <td
              className="m-properties-list__property-label"
            >
              Operator
            </td>
            <td
              className="m-properties-list__property-value"
            >
              PATTI SMITH #op1
            </td>
          </tr>
          <tr
            className="m-properties-list__property m-properties-list__property--last-login"
          >
            <td
              className="m-properties-list__property-label"
            >
              Last Login
            </td>
            <td
              className="m-properties-list__property-value"
            >
              4 hr 3 min; 1:38 PM
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="m-vehicle-properties-panel__location"
    >
      <div
        className="m-vehicle-properties-panel__latlng"
      >
        <div
          className="m-vehicle-properties-panel__label"
        >
          Current Location
        </div>
        <a
          className="m-vehicle-properties-panel__link"
          href="https://www.google.com/maps/dir/?api=1&destination=0,0&travelmode=driving"
          rel="noreferrer"
          target="_blank"
        >
          Directions
        </a>
      </div>
      <div
        className="m-vehicle-properties-panel__next-stop"
      >
        <div
          className="m-vehicle-properties-panel__label"
        >
          Next Stop
        </div>
        <div
          className="m-vehicle-properties-panel__value"
        >
          Stop Name
        </div>
      </div>
      <div
        className="m-vehicle-properties-panel__map"
      >
        <div
          className="m-vehicle-map-state m-vehicle-map-state--auto-centering"
        />
        <div
          className="m-vehicle-map"
          id="id-vehicle-map"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`VehiclePropertiesPanel renders for an early vehicle 1`] = `
<div
  className="m-vehicle-properties-panel"
>
  <div
    className="m-properties-panel__header-wrapper"
  >
    <div
      className="m-view-header"
    >
      <h2
        className="m-view-header__title"
      >
        Vehicles
      </h2>
      <button
        aria-label="Close"
        className="m-close-button m-close-button--x-large m-close-button--light"
        onClick={[Function]}
      >
        <span
          aria-hidden={true}
          aria-label=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg/>",
            }
          }
          role="img"
        />
      </button>
    </div>
    <div
      className="m-properties-panel__header"
    >
      <div
        className="m-properties-panel__label"
      >
        <svg
          role="img"
          style={
            Object {
              "height": 64,
              "width": 64,
            }
          }
          viewBox="-32 -20 64 64"
        >
          <title>
            Vehicle Status Icon
          </title>
          <g
            className="m-vehicle-icon m-vehicle-icon--large early early-red"
          >
            <rect
              className="m-vehicle-icon__label-background"
              height={24}
              rx={12}
              ry={12}
              width={64}
              x={-32}
              y={19}
            />
            <text
              className="m-vehicle-icon__label m-vehicle-icon__label--normal"
              dominantBaseline="central"
              textAnchor="middle"
              x="0"
              y={31}
            >
              1
            </text>
            <path
              className="m-vehicle-icon__triangle"
              d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
              data-testid="vehicle-triangle"
              transform="scale(1) rotate(0) translate(-24,-22)"
            />
            <text
              className="m-vehicle-icon__variant"
              dominantBaseline="alphabetic"
              textAnchor="middle"
              x={0}
              y={14}
            >
              X
            </text>
          </g>
        </svg>
      </div>
      <div
        className="m-properties-panel__variant"
      >
        <div
          className="m-properties-panel__inbound-outbound"
        />
        <output
          aria-label="Route Variant Name"
          className="m-route-variant-name undefined"
        >
          <output
            aria-label="Route & Variant"
            className="m-route-variant-name__route-id"
          >
            39_X
          </output>
           
          <output
            aria-label="Headsign"
            className="m-route-variant-name__headsign"
          >
            Forest Hills
          </output>
        </output>
        <div
          className="m-properties-panel__schedule-adherence early early-red"
        >
          <div
            className="m-properties-panel__schedule-adherence-status-icon"
          >
            <svg
              height="10"
              width="10"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
              />
            </svg>
          </div>
          <div
            className="m-properties-panel__schedule-adherence-status-string"
          >
            early
          </div>
          <div
            className="m-properties-panel__schedule-adherence-label"
          >
            (2 min early)
          </div>
        </div>
      </div>
      <div
        className="m-properties-panel__ping-container"
      >
        <div
          className="m-properties-panel__last-gps-ping"
        >
          111s ago
        </div>
      </div>
    </div>
    <ul
      className="m-tabs__tab-list"
      role="tablist"
    >
      <li
        className="m-tabs__tab m-tabs__tab--selected"
      >
        <button
          aria-selected={true}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Status
        </button>
      </li>
      <li
        className="m-tabs__tab"
      >
        <button
          aria-selected={false}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Run
        </button>
      </li>
      <li
        className="m-tabs__tab"
      >
        <button
          aria-selected={false}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Block
        </button>
      </li>
    </ul>
  </div>
  <div
    className="m-tabs__tab-panel"
  >
    <div
      className="m-properties-list"
    >
      <table
        className="m-properties-list__table"
      >
        <tbody>
          <tr
            className="m-properties-list__property "
          >
            <td
              className="m-properties-list__property-label"
            >
              Run
            </td>
            <td
              className="m-properties-list__property-value"
            >
              run-1
            </td>
          </tr>
          <tr
            className="m-properties-list__property "
          >
            <td
              className="m-properties-list__property-label"
            >
              Vehicle
            </td>
            <td
              className="m-properties-list__property-value"
            >
              v1-label
            </td>
          </tr>
          <tr
            className="m-properties-list__property m-properties-list__property--operator fs-mask"
          >
            <td
              className="m-properties-list__property-label"
            >
              Operator
            </td>
            <td
              className="m-properties-list__property-value"
            >
              PATTI SMITH #op1
            </td>
          </tr>
          <tr
            className="m-properties-list__property m-properties-list__property--last-login"
          >
            <td
              className="m-properties-list__property-label"
            >
              Last Login
            </td>
            <td
              className="m-properties-list__property-value"
            >
              4 hr 3 min; 1:38 PM
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="m-vehicle-properties-panel__location"
    >
      <div
        className="m-vehicle-properties-panel__latlng"
      >
        <div
          className="m-vehicle-properties-panel__label"
        >
          Current Location
        </div>
        <a
          className="m-vehicle-properties-panel__link"
          href="https://www.google.com/maps/dir/?api=1&destination=0,0&travelmode=driving"
          rel="noreferrer"
          target="_blank"
        >
          Directions
        </a>
      </div>
      <div
        className="m-vehicle-properties-panel__next-stop"
      >
        <div
          className="m-vehicle-properties-panel__label"
        >
          Next Stop
        </div>
        <div
          className="m-vehicle-properties-panel__value"
        >
          Stop Name
        </div>
      </div>
      <div
        className="m-vehicle-properties-panel__map"
      >
        <div
          className="m-vehicle-map-state m-vehicle-map-state--auto-centering"
        />
        <div
          className="m-vehicle-map"
          id="id-vehicle-map"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`VehiclePropertiesPanel renders for an off-course vehicle 1`] = `
<div
  className="m-vehicle-properties-panel"
>
  <div
    className="m-properties-panel__header-wrapper"
  >
    <div
      className="m-view-header"
    >
      <h2
        className="m-view-header__title"
      >
        Vehicles
      </h2>
      <button
        aria-label="Close"
        className="m-close-button m-close-button--x-large m-close-button--light"
        onClick={[Function]}
      >
        <span
          aria-hidden={true}
          aria-label=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg/>",
            }
          }
          role="img"
        />
      </button>
    </div>
    <div
      className="m-properties-panel__header"
    >
      <div
        className="m-properties-panel__label"
      >
        <svg
          role="img"
          style={
            Object {
              "height": 64,
              "width": 64,
            }
          }
          viewBox="-32 -20 64 64"
        >
          <title>
            Vehicle Status Icon
          </title>
          <g
            className="m-vehicle-icon m-vehicle-icon--large off-course early-red"
          >
            <rect
              className="m-vehicle-icon__label-background"
              height={24}
              rx={12}
              ry={12}
              width={64}
              x={-32}
              y={19}
            />
            <text
              className="m-vehicle-icon__label m-vehicle-icon__label--normal"
              dominantBaseline="central"
              textAnchor="middle"
              x="0"
              y={31}
            >
              1
            </text>
            <path
              className="m-vehicle-icon__triangle"
              d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
              data-testid="vehicle-triangle"
              transform="scale(1) rotate(0) translate(-24,-22)"
            />
            <text
              className="m-vehicle-icon__variant"
              dominantBaseline="alphabetic"
              textAnchor="middle"
              x={0}
              y={14}
            >
              X
            </text>
          </g>
        </svg>
      </div>
      <div
        className="m-properties-panel__variant"
      >
        <div
          className="m-properties-panel__inbound-outbound"
        />
        <output
          aria-label="Route Variant Name"
          className="m-route-variant-name undefined"
        >
          <output
            aria-label="Route & Variant"
            className="m-route-variant-name__route-id"
          >
            39_X
          </output>
           
          <output
            aria-label="Headsign"
            className="m-route-variant-name__headsign"
          >
            Forest Hills
          </output>
        </output>
        <div
          className="m-properties-panel__schedule-adherence off-course early-red"
        >
          <div
            className="m-properties-panel__schedule-adherence-status-icon"
          >
            <svg
              height="10"
              width="10"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
              />
            </svg>
          </div>
          <div
            className="m-properties-panel__schedule-adherence-status-string"
          >
            Invalid
          </div>
          <div
            className="m-properties-panel__schedule-adherence-label"
          />
        </div>
      </div>
      <div
        className="m-properties-panel__ping-container"
      >
        <div
          className="m-properties-panel__last-gps-ping"
        >
          111s ago
        </div>
      </div>
    </div>
    <ul
      className="m-tabs__tab-list"
      role="tablist"
    >
      <li
        className="m-tabs__tab m-tabs__tab--selected"
      >
        <button
          aria-selected={true}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Status
        </button>
      </li>
      <li
        className="m-tabs__tab"
      >
        <button
          aria-selected={false}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Run
        </button>
      </li>
      <li
        className="m-tabs__tab"
      >
        <button
          aria-selected={false}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Block
        </button>
      </li>
    </ul>
  </div>
  <div
    aria-labelledby="card-label-:r4:"
    className="m-card m-card--lemon m-vehicle-properties-panel__invalid-banner m-card--no-focus-or-hover m-card--inactive"
  >
    <div
      className="m-card__left"
    >
      <div
        className="m-card__left-content"
      >
        <div
          className="m-card__top-row"
        >
          <div
            className="m-card__title"
            id="card-label-:r4:"
          >
            <h3>
              Invalid Bus
            </h3>
          </div>
        </div>
        <div
          className="m-card__contents"
        >
          <div
            className="m-card__body"
          >
            We cannot match this vehicle to a scheduled trip at this time. This vehicle may be off-route or severely off-schedule.
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="m-tabs__tab-panel"
  >
    <div
      className="m-properties-list"
    >
      <table
        className="m-properties-list__table"
      >
        <tbody>
          <tr
            className="m-properties-list__property "
          >
            <td
              className="m-properties-list__property-label"
            >
              Run
            </td>
            <td
              className="m-properties-list__property-value"
            >
              run-1
            </td>
          </tr>
          <tr
            className="m-properties-list__property "
          >
            <td
              className="m-properties-list__property-label"
            >
              Vehicle
            </td>
            <td
              className="m-properties-list__property-value"
            >
              v1-label
            </td>
          </tr>
          <tr
            className="m-properties-list__property m-properties-list__property--operator fs-mask"
          >
            <td
              className="m-properties-list__property-label"
            >
              Operator
            </td>
            <td
              className="m-properties-list__property-value"
            >
              PATTI SMITH #op1
            </td>
          </tr>
          <tr
            className="m-properties-list__property m-properties-list__property--last-login"
          >
            <td
              className="m-properties-list__property-label"
            >
              Last Login
            </td>
            <td
              className="m-properties-list__property-value"
            >
              4 hr 3 min; 1:38 PM
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="m-vehicle-properties-panel__location"
    >
      <div
        className="m-vehicle-properties-panel__latlng"
      >
        <div
          className="m-vehicle-properties-panel__label"
        >
          Current Location
        </div>
        <a
          className="m-vehicle-properties-panel__link"
          href="https://www.google.com/maps/dir/?api=1&destination=0,0&travelmode=driving"
          rel="noreferrer"
          target="_blank"
        >
          Directions
        </a>
      </div>
      <div
        className="m-vehicle-properties-panel__next-stop"
      >
        <div
          className="m-vehicle-properties-panel__label"
        >
          Next Stop
        </div>
        <div
          className="m-vehicle-properties-panel__value"
        >
          <span
            className="m-vehicle-properties-panel__not-available"
          >
            Not available
          </span>
        </div>
      </div>
      <div
        className="m-vehicle-properties-panel__map"
      >
        <div
          className="m-vehicle-map-state m-vehicle-map-state--auto-centering"
        />
        <div
          className="m-vehicle-map"
          id="id-vehicle-map"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`VehiclePropertiesPanel renders with route data 1`] = `
<div
  className="m-vehicle-properties-panel"
>
  <div
    className="m-properties-panel__header-wrapper"
  >
    <div
      className="m-view-header"
    >
      <h2
        className="m-view-header__title"
      >
        Vehicles
      </h2>
      <button
        aria-label="Close"
        className="m-close-button m-close-button--x-large m-close-button--light"
        onClick={[Function]}
      >
        <span
          aria-hidden={true}
          aria-label=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "<svg/>",
            }
          }
          role="img"
        />
      </button>
    </div>
    <div
      className="m-properties-panel__header"
    >
      <div
        className="m-properties-panel__label"
      >
        <svg
          role="img"
          style={
            Object {
              "height": 64,
              "width": 64,
            }
          }
          viewBox="-32 -20 64 64"
        >
          <title>
            Vehicle Status Icon
          </title>
          <g
            className="m-vehicle-icon m-vehicle-icon--large on-time early-red"
          >
            <rect
              className="m-vehicle-icon__label-background"
              height={24}
              rx={12}
              ry={12}
              width={64}
              x={-32}
              y={19}
            />
            <text
              className="m-vehicle-icon__label m-vehicle-icon__label--normal"
              dominantBaseline="central"
              textAnchor="middle"
              x="0"
              y={31}
            >
              1
            </text>
            <path
              className="m-vehicle-icon__triangle"
              d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
              data-testid="vehicle-triangle"
              transform="scale(1) rotate(0) translate(-24,-22)"
            />
            <text
              className="m-vehicle-icon__variant"
              dominantBaseline="alphabetic"
              textAnchor="middle"
              x={0}
              y={14}
            >
              X
            </text>
          </g>
        </svg>
      </div>
      <div
        className="m-properties-panel__variant"
      >
        <div
          className="m-properties-panel__inbound-outbound"
        >
          Outbound
        </div>
        <output
          aria-label="Route Variant Name"
          className="m-route-variant-name undefined"
        >
          <output
            aria-label="Route & Variant"
            className="m-route-variant-name__route-id"
          >
            39_X
          </output>
           
          <output
            aria-label="Headsign"
            className="m-route-variant-name__headsign"
          >
            Forest Hills
          </output>
        </output>
        <div
          className="m-properties-panel__schedule-adherence on-time early-red"
        >
          <div
            className="m-properties-panel__schedule-adherence-status-icon"
          >
            <svg
              height="10"
              width="10"
            >
              <circle
                cx="5"
                cy="5"
                r="5"
              />
            </svg>
          </div>
          <div
            className="m-properties-panel__schedule-adherence-status-string"
          >
            on time
          </div>
          <div
            className="m-properties-panel__schedule-adherence-label"
          >
            (0 min early)
          </div>
        </div>
      </div>
      <div
        className="m-properties-panel__ping-container"
      >
        <div
          className="m-properties-panel__last-gps-ping"
        >
          111s ago
        </div>
      </div>
    </div>
    <ul
      className="m-tabs__tab-list"
      role="tablist"
    >
      <li
        className="m-tabs__tab m-tabs__tab--selected"
      >
        <button
          aria-selected={true}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Status
        </button>
      </li>
      <li
        className="m-tabs__tab"
      >
        <button
          aria-selected={false}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Run
        </button>
      </li>
      <li
        className="m-tabs__tab"
      >
        <button
          aria-selected={false}
          onClick={[Function]}
          role="tab"
        >
          <svg
            className="m-tabs__tab-status-icon"
            height="14"
            width="14"
          >
            <circle
              className="m-tabs__tab-status-icon-outer-circle"
              cx="7"
              cy="7"
              r="6"
            />
            <circle
              className="m-tabs__tab-status-icon-inner-circle"
              cx="7"
              cy="7"
              r="4"
            />
          </svg>
          Block
        </button>
      </li>
    </ul>
  </div>
  <div
    className="m-tabs__tab-panel"
  >
    <div
      className="m-properties-list"
    >
      <table
        className="m-properties-list__table"
      >
        <tbody>
          <tr
            className="m-properties-list__property "
          >
            <td
              className="m-properties-list__property-label"
            >
              Run
            </td>
            <td
              className="m-properties-list__property-value"
            >
              run-1
            </td>
          </tr>
          <tr
            className="m-properties-list__property "
          >
            <td
              className="m-properties-list__property-label"
            >
              Vehicle
            </td>
            <td
              className="m-properties-list__property-value"
            >
              v1-label
            </td>
          </tr>
          <tr
            className="m-properties-list__property m-properties-list__property--operator fs-mask"
          >
            <td
              className="m-properties-list__property-label"
            >
              Operator
            </td>
            <td
              className="m-properties-list__property-value"
            >
              PATTI SMITH #op1
            </td>
          </tr>
          <tr
            className="m-properties-list__property m-properties-list__property--last-login"
          >
            <td
              className="m-properties-list__property-label"
            >
              Last Login
            </td>
            <td
              className="m-properties-list__property-value"
            >
              4 hr 3 min; 1:38 PM
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="m-vehicle-properties-panel__location"
    >
      <div
        className="m-vehicle-properties-panel__latlng"
      >
        <div
          className="m-vehicle-properties-panel__label"
        >
          Current Location
        </div>
        <a
          className="m-vehicle-properties-panel__link"
          href="https://www.google.com/maps/dir/?api=1&destination=0,0&travelmode=driving"
          rel="noreferrer"
          target="_blank"
        >
          Directions
        </a>
      </div>
      <div
        className="m-vehicle-properties-panel__next-stop"
      >
        <div
          className="m-vehicle-properties-panel__label"
        >
          Next Stop
        </div>
        <div
          className="m-vehicle-properties-panel__value"
        >
          Stop Name
        </div>
      </div>
      <div
        className="m-vehicle-properties-panel__map"
      >
        <div
          className="m-vehicle-map-state m-vehicle-map-state--auto-centering"
        />
        <div
          className="m-vehicle-map"
          id="id-vehicle-map"
        />
      </div>
    </div>
  </div>
</div>
`;
